Fri Jan 28 16:27:01 2000  Ezra Peisach  <epeisach@mit.edu>

	* argv_parse.c: Include string.h (for strlen prototype)

1999-10-26  Tom Yu  <tlyu@mit.edu>

	* Makefile.in: Clean up usage of CFLAGS, CPPFLAGS, DEFS, DEFINES,
	LOCAL_INCLUDES such that one can override CFLAGS from the command
	line without losing CPP search patchs and defines. Some associated
	Makefile cleanup. [from wsanchez@apple.com]

1999-09-01  Danilo Almeida  <dalmeida@mit.edu>

	* profile.hin (profile_init, profile_init_path): Define and use
	const_profile_filespec_t.

	* prof_init.c (profile_init, profile_init_path):
	* prof_file.c (profile_open_file):
	* prof_int.h (profile_open_file): Use const_profile_filespec_t.

	* prof_int.h (PROFILE_LAST_FILESPEC): Compare a char against a char,
	not a void*.

	* Makefile.in: Remove DOSDEFS to avoid warnings.  The thing it
	defined is already set in win-mac.h.

1999-08-18  Miro Jurisic  <meeroh@mit.edu>

	* profile.exp: removed com_err functions (they are in a library
	of their own now) from MacOS export file

1999-08-05  Danilo Almeida  <dalmeida@mit.edu>

	* prof_get.c (profile_free_string): 
	* profile.hin: Add profile_free_string to free strings allocated
	by profile_get_string. -- And then remove them because
	profile_release_string already exists for that purpose.	

1999-08-03 Alexandra Ellwood <lxs@mit.edu>

	* prof_file.c (profile_open_file)
		Mac OS side now sets profile->magic to PROF_MAGIC_FILE 
		so the rest of the functions think it's a real profile.
		  
1999-07-22 Jeffrey Altman <jaltman@columbia.edu>

        * prof_init.c (prof_init)
          Change behavior so that a NULL filespec means allocate
          a profile without a backing store.

1999-07-21  Ken Raeburn  <raeburn@mit.edu>

	* prof_int.h (profile_t): Delete typedef, since Miro changed
	prof_int.h to include profile.h, which also has the typedef.
	* prof_file.c, prof_init.c: Fix typos and missed variable and type
	name changes from Miro's patch.
