@@ -54,4 +54,10 @@ error_code	PROF_FAIL_OPEN,		"Couldn't open profile file"
 #
 error_code	PROF_EXISTS,		"Section already exists"
 
+#
+# generated by prof_get.c
+#
+error_code	PROF_BAD_BOOLEAN,		"Invalid boolean value"
+error_code	PROF_BAD_INTEGER,		"Invalid integer value"
+
 end
