@@ -252,6 +252,83 @@ profile_get_integer(profile, name, subname, subsubname,
 	const char	*value;
 	errcode_t	retval;
 	const char	*names[4];
+	const char *end_value;
+	long		ret_long;
+
+	if (profile == 0) {
+		*ret_int = def_val;
+		return 0;
+	}
+
+	names[0] = name;
+	names[1] = subname;
+	names[2] = subsubname;
+	names[3] = 0;
+	retval = profile_get_value(profile, names, &value);
+	if (retval == PROF_NO_SECTION || retval == PROF_NO_RELATION) {
+		*ret_int = def_val;
+		return 0;
+	} else if (retval)
+		return retval;
+		
+	ret_long = strtol (value, &end_value, 10);
+	if ((errno != 0) || (end_value != value + strlen (value)) || 
+	    (end_value == value) || (ret_long > INT_MAX) ||
+	    (ret_long < INT_MIN)) {
+	    return PROF_BAD_INTEGER;
+	}
+	
+   
+	*ret_int = ret_long;
+	return 0;
+}
+
+static char *conf_yes[] = {
+    "y", "yes", "true", "t", "1", "on",
+    0,
+};
+
+static char *conf_no[] = {
+    "n", "no", "false", "nil", "0", "off",
+    0,
+};
+
+static errcode_t
+profile_parse_boolean(s, ret_boolean)
+     char *s;
+     int* ret_boolean;
+{
+    char **p;
+    
+    if (ret_boolean == NULL)
+    	return PROF_EINVAL;
+
+    for(p=conf_yes; *p; p++) {
+	if (!strcasecmp(*p,s))
+		*ret_boolean = 1;
+	    return 0;
+    }
+
+    for(p=conf_no; *p; p++) {
+	if (!strcasecmp(*p,s))
+		*ret_boolean = 0;
+	    return 0;
+    }
+	
+	return PROF_BAD_BOOLEAN;
+}
+
+KRB5_DLLIMP errcode_t KRB5_CALLCONV
+profile_get_boolean(profile, name, subname, subsubname,
+			      def_val, ret_boolean)
+	profile_t	profile;
+	const char	*name, *subname, *subsubname;
+	int		def_val;
+	int		*ret_int;
+{
+	const char	*value;
+	errcode_t	retval;
+	const char	*names[4];
 
 	if (profile == 0) {
 		*ret_int = def_val;
@@ -269,8 +346,7 @@ profile_get_integer(profile, name, subname, subsubname,
 	} else if (retval)
 		return retval;
    
-	*ret_int = atoi(value);
-	return 0;
+	return prof_parse_boolean (value, ret_int);
 }
 
 /*
