@@ -11,6 +11,7 @@ profile_release
 profile_get_values
 profile_free_list
 profile_get_string
+profile_get_boolean
 profile_get_integer
 profile_get_relation_names
 profile_get_subsection_names
